Fixed word wrapping issue.

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,8 @@ img {
     border-radius: 10px;
 
     background-color: rgb(209 213 219);
+
+    overflow-wrap: break-word;
 }
 
 .card h2 {
